# cprimer

./: main.cc
ch1/: main.cc
ch12/strngbad/: CMakeLists.txt
ch12/strngbad/src/: strngbad.cc  strngbad.h  vegnews.cc
ch8/8_11/: funtemp.cc
ch8/8_12/: twotemps.cc
